syntax = "proto3";

package org.bian.protobuf.customeroffer;

import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "org.bian.protobuf.customeroffer";

message CustomerOfferNotification {
  string status = 1;
  BasicReference customerOfferReference = 2;
  CustomerReference customerReference = 3;
  FacilityApplicationReference facilityApplicationReference = 4;
  BasicReference consumerLoanReference = 5;
}

message BasicReference {
  string id = 1;
  string status = 2;
}

message CustomerReference {
  string id = 1;
  string name = 2;
}

message FacilityApplicationReference {
  string productCode = 1;
}

message CustomerOfferProcedure {
  string servicingSessionReference = 1;
  google.protobuf.Any procedureInitiate = 2;
  string procedureInstanceStatus = 3;
  ProcedureInstanceRecord procedure = 4;
  ProductInstanceRecord product = 5;
  UnderwritingInstanceRecord underwriting = 6;
  ComplianceInstanceRecord compliance = 7;
  AuditInstanceRecord audit = 8;
  BookingInstanceRecord booking = 9;
  CorrespondenceAndDocumentsInstanceRecord correspondenceAndDocuments = 10;
  AgreementInstanceRecord agreement = 11;
  ProductInitializationInstanceRecord productInitialization = 12;
}

message CustomerOfferProcedureUpdate {
  string servicingSessionReference = 1;
  string procedureInstanceReference = 2;
  ProcedureInstanceRecord procedure = 3;
  google.protobuf.Any customerOfferProcedureUpdateActionTaskRecord = 4;
  string updateActionRequest = 5;
}

message ProcedureInstanceRecord {
  string customerReference = 1;
  string partyReference = 2;
  string productServiceType = 3;
  string customerOfferProcessingSchedule = 4;
  ProcessingTask customerOfferProcessingTask = 5;
}

message ProcessingTask {
  string type = 1;
  string employeeBusinessUnitReference = 2;
}

message ProductInstanceRecord {
  string customerCreditRating = 1;
}

message UnderwritingInstanceRecord {
  string customerIncomeStatement = 1;
  string customerDebtStatement = 2;
  string customerAssetStatement = 3;
}

message ComplianceInstanceRecord {
  string regulatoryComplianceCheckType = 1;
  string regulatoryComplianceCheckRequirement = 2;
}

message AuditInstanceRecord {
  string guidelineComplianceCheckType = 1;
  string guidelineComplianceCheckRequirement = 2;
}

message BookingInstanceRecord {
  string businessUnitReference = 1;
  string assetLiabilityType = 2;
  string amount = 3;
}

message CorrespondenceAndDocumentsInstanceRecord {
  string customerOfferRequiredDocuments = 1;
}

message AgreementInstanceRecord {
  string customerAgreementInstanceReference = 1;
}

message ProductInitializationInstanceRecord {
  string productInstanceReference = 1;
}